# Reminder

./: .gitattributes  CHANGELOG.md  README.md  package-lock.json  package.json
scripts/: build-installer.bat  setup-rust.ps1
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  timer.rs  windows.rs
src-tauri/windows/: hooks.nsh
src/lib/: i18n.svelte.ts  types.ts  utils.ts
src/lib/components/: ColorPicker.svelte  DurationGrid.svelte  DurationInput.svelte  ProgressRing.svelte  SettingCard.svelte  SettingsView.svelte  TabSwitch.svelte  TitleBar.svelte  Toggle.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/break/: +page.svelte
src/routes/break-prompt/: +page.svelte
